# python-project-505

./: .gitignore  Makefile  README.md  gendiff.py  pyproject.toml
.github/workflows/: README.md  lint-and-test.yml
gendiff/: gendiff.py  gendiff_pars.py
gendiff/scripts/: gendiff_script.py
tests/: test_gendiff.py
