[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Iurii_Young <yura.young2002@gmail.com>"]
readme = "README.md"
packages = [
  { include = "gendiff" }
]
repository = "https://github.com/IuriiYoung/python-project-50.git"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
ruff = "^0.12.5"
pytest = "^8.4.1"
pytest-cov = "^6.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff_script:main"


